@@ -99,7 +99,9 @@ PreferencePage_DetectTestOnlyToolTip=Detect code only called by: test methods/cl
 PreferencePage_LiteralsCheck=&Search class names in text files. Slow, when pattern matches big files!
 PreferencePage_LiteralsCheckToolTip=Searches class names in text files matching pattern below. Slow for big text files
 PreferencePage_CheckFullClassName=&Use full qualified class name
-PreferencePage_CheckFullClassNameToolTip=Search for 'org.ucdetector.Example' or 'Example' only
+PreferencePage_CheckSimleClassName=Use &simple class name
+PreferencePage_CheckFullClassNameToolTip=Search for full class name: 'org.ucdetector.Example'
+PreferencePage_CheckSimpleClassNameToolTip=Search for 'Example' only (instead of 'org.ucdetector.Example')
 PreferencePage_Literals=&File name pattern to search
 PreferencePage_LiteralsToolTip=File pattern like '*.xml,*.java'.
 
